--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,13 @@
 root = true
 
-[*]
+[*.js]
 end_of_line = lf
+insert_final_newline = true
+charset = utf-8
+
+[*.js]
 indent_style = space
 indent_size = 2
-charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
+
+[Makefile]
+indent_style = tab
