--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,9 @@
 {
-  "endOfLine":"auto",
+  "bracketSpacing": true,
+  "printWidth": 80,
   "singleQuote": true,
-  "trailingComma": "es5"
+  "trailingComma": "none",
+  "tabWidth": 2,
+  "useTabs": false,
+  "react/jsx-max-props-per-line": [1, { "when": "always" }]
 }
