--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,5 @@
 {
-  "bracketSpacing": true,
-  "printWidth": 80,
+  "endOfLine":"auto",
   "singleQuote": true,
-  "trailingComma": "none",
-  "tabWidth": 2,
-  "useTabs": false,
-  "react/jsx-max-props-per-line": [1, { "when": "always" }]
+  "trailingComma": "es5"
 }
