--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
-    "jquery-validation": "^1.19.3",
     "lodash": "^4.17.19",
     "noty": "^3.2.0-beta-deprecated",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.3",
-    "react-validation": "^3.0.7"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
