--- a/package.json
+++ b/package.json
@@ -3,19 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.9.9",
+    "@material-ui/icons": "^4.11.2",
+    "@pusher/push-notifications-web": "^1.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
     "lodash": "^4.17.19",
     "noty": "^3.2.0-beta-deprecated",
+    "pusher-js": "^7.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
+    "react-pusher-hoc": "^1.0.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
-    "react-validation": "^3.0.7"
+    "react-use-websocket": "^2.6.1",
+    "react-validation": "^3.0.7",
+    "styled-components": "^5.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
