--- a/package.json
+++ b/package.json
@@ -6,25 +6,29 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4.9.9",
+    "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@pusher/push-notifications-web": "^1.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
+    "laravel-echo": "^1.10.0",
     "lodash": "^4.17.19",
     "noty": "^3.2.0-beta-deprecated",
     "pusher-js": "^7.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
+    "react-input-mask": "^2.0.4",
     "react-pusher-hoc": "^1.0.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
     "react-use-websocket": "^2.6.1",
     "react-validation": "^3.0.7",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "sweetalert2-react": "^0.8.3",
+    "sweetalert2-react-content": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,5 +50,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.32.12",
+    "sass-loader": "^11.0.1",
+    "webpack": "4.44.2"
   }
 }
