--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -18,15 +20,17 @@
     "noty": "^3.2.0-beta-deprecated",
     "pusher-js": "^7.0.3",
     "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
     "react-input-mask": "^2.0.4",
+    "react-material-ui-form-validator": "^2.1.4",
     "react-pusher-hoc": "^1.0.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
     "react-use-websocket": "^2.6.1",
     "react-validation": "^3.0.7",
-    "styled-components": "^5.2.3",
+    "styled-components": "^5.3.0",
     "sweetalert2-react": "^0.8.3",
     "sweetalert2-react-content": "^3.3.2"
   },
@@ -54,6 +58,6 @@
   "devDependencies": {
     "sass": "^1.32.12",
     "sass-loader": "^11.0.1",
-    "webpack": "4.44.2"
+    "webpack": "^4.44.2"
   }
 }
