--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
+    "file-saver": "^2.0.5",
     "laravel-echo": "^1.10.0",
     "lodash": "^4.17.19",
     "noty": "^3.2.0-beta-deprecated",
