--- a/package.json
+++ b/package.json
@@ -1,70 +1,72 @@
 {
-  "name": "misterins-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/data-grid": "^4.0.0-alpha.29",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@material-ui/x-grid-data-generator": "^4.0.0-alpha.29",
-    "@pusher/push-notifications-web": "^1.1.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.21.1",
-    "bootstrap": "^5.0.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "file-saver": "^2.0.5",
-    "laravel-echo": "^1.10.0",
-    "lodash": "^4.17.19",
-    "noty": "^3.2.0-beta-deprecated",
-    "pusher-js": "^7.0.3",
-    "react": "^16.13.1",
-    "react-copy-to-clipboard": "^5.0.3",
-    "react-dom": "^16.13.1",
-    "react-icons": "^3.9.0",
-    "react-input-mask": "^2.0.4",
-    "react-material-ui-form-validator": "^2.1.4",
-    "react-pusher-hoc": "^1.0.7",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.3",
-    "react-use-websocket": "^2.6.1",
-    "react-validation": "^3.0.7",
-    "styled-components": "^5.3.0",
-    "sweetalert2-react": "^0.8.3",
-    "sweetalert2-react-content": "^3.3.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 edge version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "sass": "^1.32.12",
-    "sass-loader": "^11.0.1",
-    "webpack": "^4.44.2"
-  }
+    "name": "misterins-app",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.35",
+        "@fortawesome/free-brands-svg-icons": "^5.15.3",
+        "@fortawesome/free-regular-svg-icons": "^5.15.3",
+        "@fortawesome/free-solid-svg-icons": "^5.15.3",
+        "@fortawesome/react-fontawesome": "^0.1.14",
+        "@material-ui/core": "^4.11.4",
+        "@material-ui/data-grid": "^4.0.0-alpha.29",
+        "@material-ui/icons": "^4.11.2",
+        "@material-ui/lab": "^4.0.0-alpha.58",
+        "@material-ui/x-grid-data-generator": "^4.0.0-alpha.29",
+        "@pusher/push-notifications-web": "^1.1.0",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2",
+        "@types/react-transition-group": "^4.4.1",
+        "axios": "^0.21.1",
+        "bootstrap": "^5.0.2",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "file-saver": "^2.0.5",
+        "laravel-echo": "^1.10.0",
+        "lodash": "^4.17.19",
+        "noty": "^3.2.0-beta-deprecated",
+        "pusher-js": "^7.0.3",
+        "react": "^16.13.1",
+        "react-bootstrap": "^1.6.1",
+        "react-copy-to-clipboard": "^5.0.3",
+        "react-dom": "^16.13.1",
+        "react-icons": "^3.9.0",
+        "react-input-mask": "^2.0.4",
+        "react-material-ui-form-validator": "^2.1.4",
+        "react-pusher-hoc": "^1.0.7",
+        "react-router-dom": "^5.1.2",
+        "react-scripts": "^4.0.3",
+        "react-transition-group": "^4.4.2",
+        "react-use-websocket": "^2.6.1",
+        "react-validation": "^3.0.7",
+        "styled-components": "^5.3.0",
+        "sweetalert2-react": "^0.8.3",
+        "sweetalert2-react-content": "^3.3.2"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 edge version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "sass": "^1.32.12",
+        "sass-loader": "^11.0.1"
+    }
 }
