--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-icons": "^3.9.0",
         "react-input-mask": "^2.0.4",
         "react-material-ui-form-validator": "^2.1.4",
+        "react-player": "^2.9.0",
         "react-pusher-hoc": "^1.0.7",
         "react-router-dom": "^5.1.2",
         "react-scripts": "^4.0.3",
